--- a/helm/k8s-dns-node-cache-app/templates/daemonset.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/daemonset.yaml
@@ -48,11 +48,12 @@ spec:
         - -setupinterface=false
         - -setupiptables=false
         securityContext:
+          readOnlyRootFilesystem: true
           capabilities:
             add:
-            - NET_ADMIN
-          seccompProfile:
-            type: Unconfined
+            - NET_BIND_SERVICE
+            drop:
+            - ALL
         ports:
         - containerPort: {{ .Values.ports.prometheus.nodecache }}
           name: metrics
