--- a/helm/k8s-dns-node-cache-app/templates/daemonset.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/daemonset.yaml
@@ -25,6 +25,12 @@ spec:
         operator: "Exists"
       - effect: "NoSchedule"
         operator: "Exists"
+      securityContext:
+        readOnlyRootFilesystem: true
+        runAsUser: 33
+        runAsGroup: 33
+        seccompProfile:
+          type: RuntimeDefault
       containers:
       - name: node-cache
         image: "{{ .Values.image.registry }}/{{ .Values.image.name }}:{{ .Values.image.tag }}"
@@ -36,7 +42,7 @@ spec:
         - "{{ .Values.cluster.kubernetes.LOCAL.IP }},{{ .Values.cluster.kubernetes.DNS.IP }}"
         - -basecorefile
         - "/etc/coredns-base/Corefile.base"
-        - -corefile
+        - -conf
         - "/etc/coredns/Corefile"
         - -upstreamsvc
         - "{{ .Values.name }}-upstream"
@@ -50,12 +56,13 @@ spec:
         - -setupinterface=false
         - -setupiptables=false
         securityContext:
-          readOnlyRootFilesystem: true
+          allowPrivilegeEscalation: false
           capabilities:
             add:
             - NET_BIND_SERVICE
             drop:
             - ALL
+          readOnlyRootFilesystem: true
         ports:
         - containerPort: {{ .Values.ports.prometheus.nodecache }}
           name: metrics
